--- a/cont.html
+++ b/cont.html
@@ -19,9 +19,61 @@
                         <a class="nav-link" href="zav.html">Наши заведения</a>
                         <a class="nav-link" href="price.html">Услуги</a>
                         <a class="nav-link" href="cont.html">Контакты</a>
+                        <a class="nav-link" href="map.html">Карта сайта</a>
                     </nav>
         <div class="photos">
-            <img class="glavph" src="img/bar1.jpg" alt="Бар">
-            <img class="glavph" src="img/bar2.jpg" alt="Бар">
-            <img class="glavph" src="img/bar3.jpg" alt="Бар">
+             <a href="zav.html"><img class="glavph" src="img/bar1.jpg" alt="Бар"></a>
+            <a href="zav.html"><img class="glavph" src="img/bar2.jpg" alt="Бар"></a>
+            <a href="zav.html"><img class="glavph" src="img/bar3.jpg" alt="Бар"></a>
         </div>
+         <div class="zav">
+             <h2>Контакты</h2>
+         <div class="zav1">
+             <img class="glavph1" src="img/dir1.png" alt="Директор">
+             <h3>Алексей Лапочкин</h3>
+             <h4>Директор</h4>
+             <ul>
+            <li><a class="foot" href="mailto:info@mail.ru">info@mail.ru</a></li>
+            <li><a class="foot" href="tel:89001005060">89001005060</a></li>
+            </ul>
+             </div>
+            <div class="zav1">
+             <img class="glavph1" src="img/dir2.jpg" alt="Менеджер">
+             <h3>Константин Ляпов</h3>
+             <h4>Менеджер</h4>
+             <ul>
+            <li><a class="foot" href="mailto:info@mail.ru">info@mail.ru</a></li>
+                 <li><a class="foot" href="tel:89001005060">89001005060</a></li>
+            </ul>
+             </div>
+         
+         <div class="zav1">
+             <img class="glavph1" src="img/dir3.jpg" alt="Секретарь">
+             <h3>Егор Климов</h3>
+             <h4>Секретарь</h4>
+             <ul>
+            <li><a class="foot" href="mailto:info@mail.ru">info@mail.ru</a></li>
+                 <li><a class="foot" href="tel:89001005060">89001005060</a></li>
+            </ul>
+             </div>
+            <div class="forms1">
+             <form>
+                <p><h3>Обратная связь</h3><br>
+                Имя: <input type="text" name="firstname" value="" required><br>
+                Email: <input type="email" name="email" value="" required><br>
+                Жалоба/Предложение <textarea name="zhb" rows="5" required></textarea><br>
+                 <p><input type="radio" name="radio" value="n" checked> Не срочно</p>
+                 <p><input type="radio" name="radio" value="y">Срочно</p><br>
+                <input type="reset" value="Сбросить">
+                 <input type="submit" name="button" value="Отправить">
+                </form>
+             </div>
+             </div>
+         <footer>
+            <p class="foot">(c) Савелий морозов</p> 
+            <a class="foot" href="mailto:info@mail.ru">info@mail.ru</a>
+            <a class="foot" href="tel:89001005060">89001005060</a>
+             <a href="#" class="btn">Наверх</a>
+        </footer>
+    </body>
+</html>
