--- a/price.html
+++ b/price.html
@@ -19,24 +19,25 @@
                         <a class="nav-link" href="zav.html">Наши заведения</a>
                         <a class="nav-link" href="price.html">Услуги</a>
                         <a class="nav-link" href="cont.html">Контакты</a>
+                        <a class="nav-link" href="map.html">Карта сайта</a>
                     </nav>
         <div class="photos">
-            <img class="glavph" src="img/bar1.jpg" alt="Бар">
-            <img class="glavph" src="img/bar2.jpg" alt="Бар">
-            <img class="glavph" src="img/bar3.jpg" alt="Бар">
+             <a href="zav.html"><img class="glavph" src="img/bar1.jpg" alt="Бар"></a>
+            <a href="zav.html"><img class="glavph" src="img/bar2.jpg" alt="Бар"></a>
+            <a href="zav.html"><img class="glavph" src="img/bar3.jpg" alt="Бар"></a>
         </div>
         <div class="forms">
             <h2>Услуги</h2>
         <div class="forms">
             
          <form>
-             <p><h3>Заказ мероприятия</h3><br>
+             <h3>Заказ мероприятия</h3><br>
                 Имя: <input type="text" name="firstname" value="" required><br>
                 Тип мероприятия: <input type="text" name="action" value="" required><br>
                 Дата проведения: <input type="date" name="date" value="" required><br>
                 Номер телефона: <input type="tel" name="tel" value=""  required><br>
                  <input type="submit" name="button" value="Отправить">
-                </p>
+
             </form>
             <h3>Мероприятия</h3>
             <ul>
@@ -48,13 +49,13 @@
         </div>
         <div class="forms">
          <form>
-             <p><h3>Заказ блюд</h3><br>
+             <h3>Заказ блюд</h3><br>
                 Имя: <input type="text" name="firstname" value="" required><br>
                 Адрес: <input type="text" name="adress" value="" required><br>
                 Номера блюд: <input type="text" name="food" value="" required><br>
                 Номер телефона: <input type="tel" name="tel" value=""  required><br>
                  <input type="submit" name="button" value="Отправить">
-                </p>
+
             </form>
          <h3>Меню</h3>
          <ol>
@@ -66,5 +67,16 @@
          </ol>
         </div>
         </div>
+        <div class="forms">
+            <video src="media/video.mp4" controls></video> 
+            <audio class="au1" src="media/sound.m4a" controls></audio>
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/mgwlPiLDoi4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <footer>
+            <p class="foot">(c) Савелий морозов</p> 
+            <a class="foot" href="mailto:info@mail.ru">info@mail.ru</a>
+            <a class="foot" href="tel:89001005060">89001005060</a>
+            <a href="#" class="btn">Наверх</a>
+        </footer>
     </body>
 </html>
