--- a/slv.html
+++ b/slv.html
@@ -19,57 +19,58 @@
                         <a class="nav-link" href="zav.html">Наши заведения</a>
                         <a class="nav-link" href="price.html">Услуги</a>
                         <a class="nav-link" href="cont.html">Контакты</a>
+                        <a class="nav-link" href="map.html">Карта сайта</a>
                     </nav>
         <div class="photos">
-            <img class="glavph" src="img/bar1.jpg" alt="Бар">
-            <img class="glavph" src="img/bar2.jpg" alt="Бар">
-            <img class="glavph" src="img/bar3.jpg" alt="Бар">
+             <a href="zav.html"><img class="glavph" src="img/bar1.jpg" alt="Бар"></a>
+            <a href="zav.html"><img class="glavph" src="img/bar2.jpg" alt="Бар"></a>
+            <a href="zav.html"><img class="glavph" src="img/bar3.jpg" alt="Бар"></a>
         </div>
         <div class="tdiv">
-        <table border="1" align="center" >
+        <table>
             <tr><th colspan="84">Сотрудники компании</th></tr>
             <tr><th colspan="84">Руководство компании</th></tr>
-            <tr align="center">
+            <tr>
                 <td colspan="28"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="28"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="28"><img src="img/ava.jpg" alt="Фото"></td>
             </tr>
-            <tr align="center">
+            <tr>
                 <td colspan="28">Должность</td>
                 <td colspan="28">Должность</td>
                 <td colspan="28">Должность</td>
             </tr>
-            <tr align="center">
+            <tr >
                 <td colspan="28">ФИО</td>
                 <td colspan="28">ФИО</td>
                 <td colspan="28">ФИО</td>
             </tr>
             <tr><th colspan="84">Финансвый отдел</th></tr>
-            <tr align="center">
+            <tr >
                 <td colspan="21"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="21"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="21"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="21"><img src="img/ava.jpg" alt="Фото"></td>
             </tr>
-            <tr align="center">
+            <tr >
                 <td colspan="21">Должность</td>
                 <td colspan="21">Должность</td>
                 <td colspan="21">Должность</td>
                 <td colspan="21">Должность</td>
             </tr>
-            <tr align="center">
+            <tr >
                 <td colspan="21">ФИО</td>
                 <td colspan="21">ФИО</td>
                 <td colspan="21">ФИО</td>
                 <td colspan="21">ФИО</td>
             </tr>
             <tr><th colspan="84">Маркетинговый отдел</th></tr>
-            <tr align="center">
+            <tr >
                 <td colspan="24">Офис 1</td>
                 <td colspan="36">Офис 2</td>
                 <td colspan="24">Офис 3</td>
             </tr>
-            <tr align="center">
+            <tr >
                 <td colspan="12"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="12"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="12"><img src="img/ava.jpg" alt="Фото"></td>
@@ -78,7 +79,7 @@
                 <td colspan="12"><img src="img/ava.jpg" alt="Фото"></td>
                 <td colspan="12"><img src="img/ava.jpg" alt="Фото"></td>
             </tr>
-            <tr align="center">
+            <tr >
                 <td colspan="12">ФИО</td>
                 <td colspan="12">ФИО</td>
                 <td colspan="12">ФИО</td>
@@ -173,8 +174,15 @@
         <td></td>
         <td></td>
     </tr>
-            </div>
+
             <!-- эти ячейки нужны чтобы держать на себе таблицу, если их не будет то браузер просто "оптимизирует таблицу и все сваливается в кашу" -->
         </table>
+        </div>
+        <footer>
+            <p class="foot">(c) Савелий морозов</p> 
+            <a class="foot" href="mailto:info@mail.ru">info@mail.ru</a>
+            <a class="foot" href="tel:89001005060">89001005060</a>
+            <a href="#" class="btn">Наверх</a>
+        </footer>
     </body>
 </html>
