--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ru">
     <head>
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
         <meta name="author" content="Savely Morozov">
         <meta name="description" content="Lorem Ipsum - это текст-рыба, часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной рыбой для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.">
         <meta name="keywords" content="Пиво, таверна">
