--- a/cont.html
+++ b/cont.html
@@ -65,6 +65,17 @@
                 Жалоба/Предложение <textarea name="zhb" rows="5" required></textarea><br>
                  <p><input type="radio" name="radio" value="n" checked> Не срочно</p>
                  <p><input type="radio" name="radio" value="y">Срочно</p><br>
+                 <p><input type="checkbox" name="bar" value="bar1"> Бар 1</p>
+                 <p><input type="checkbox" name="bar" value="bar2"> Бар 2</p>
+                 <p><input type="checkbox" name="bar" value="bar3"> Бар 3</p>
+                 <p>Причина</p>
+                 <select class="blck">
+                    <option>Обслуживание</option>
+                    <option>Блюда</option>
+                    <option>Напитки</option>
+                    <option>Мероприятия</option>
+                    <option>Другое</option>
+                 </select>
                 <input type="reset" value="Сбросить">
                  <input type="submit" name="button" value="Отправить">
                 </form>
